chore(server): middlewares
